--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app-wrapper {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  min-width: 100%;
+
+}
+
+.app-header {
+  min-height: 5vh;
+  background-image: url("https://www.unoosa.org/res/timeline/index_html/space-2.jpg");
+  color: white;
+  font-family: fantasy;
+    font-size: calc(30px + 2vmin);
+    padding-left: 30px;
+margin-bottom: 10px;
+}
+.container{
+  min-width: 100%;
+  background-color: #282c34;
+}
+.app-content {
+  background-color: white;
+  min-height: 100vh;
+  min-width: 100%;
+  display: flex;
+  flex-direction: row;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.nav {
+  flex: 0 0 300px;
+  background-color: darkcyan;
+  margin-right: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.content {
+  flex: 1 1 auto;
+  background-color: darkslategray;
+
+}
+
+.content  img {
+min-width: 100%;
+  max-height: 100px;
+  margin-bottom: 10px;
+}
+
+.content-text{
+  padding-left: 20px;
+  color: white;
+}
+
+.app-footer{
+  background-color: #282c34;
+  color: white;
+    font-size: calc(8px + 2vmin);
+  text-align: center;
+  padding: 10px;
 }
