--- a/src/App.css
+++ b/src/App.css
@@ -1,60 +1,61 @@
 .app-wrapper {
-  display: flex;
-  flex-direction: column;
-  min-width: 100%;
-
+    display: flex;
+    flex-direction: column;
+    min-width: 100%;
 }
 
 .app-header {
-  min-height: 5vh;
-  background-image: url("https://www.unoosa.org/res/timeline/index_html/space-2.jpg");
-  color: white;
-  font-family: fantasy;
+    min-height: 5vh;
+    background-image: url("https://www.unoosa.org/res/timeline/index_html/space-2.jpg");
+    color: white;
+    font-family: fantasy;
     font-size: calc(30px + 2vmin);
     padding-left: 30px;
-margin-bottom: 10px;
+    margin-bottom: 10px;
 }
-.container{
-  min-width: 100%;
-  background-color: #282c34;
+
+.container {
+    min-width: 100%;
+    background-color: #282c34;
 }
+
 .app-content {
-  background-color: white;
-  min-height: 100vh;
-  min-width: 100%;
-  display: flex;
-  flex-direction: row;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: white;
+    min-height: 100vh;
+    min-width: 100%;
+    display: flex;
+    flex-direction: row;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .nav {
-  flex: 0 0 300px;
-  background-color: darkcyan;
-  margin-right: 10px;
+    flex: 0 0 20vw;
+    background-color: darkcyan;
+    margin-right: 10px;
+    padding-right: 10px;
 }
 
 .content {
-  flex: 1 1 auto;
-  background-color: darkslategray;
-
+    flex: 1 1 auto;
+    background-color: darkslategray;
 }
 
-.content  img {
-min-width: 100%;
-  max-height: 100px;
-  margin-bottom: 10px;
+.content img {
+    min-width: 100%;
+    max-height: 10vh;
+    margin-bottom: 10px;
 }
 
-.content-text{
-  padding-left: 20px;
-  color: white;
+.content-text {
+    padding-left: 20px;
+    color: white;
 }
 
-.app-footer{
-  background-color: #282c34;
-  color: white;
+.app-footer {
+    background-color: #282c34;
+    color: white;
     font-size: calc(8px + 2vmin);
-  text-align: center;
-  padding: 10px;
+    text-align: center;
+    padding: 10px;
 }
